# module-ssh2

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-ssh2-module.spec  reconf.sh
cmake/: FindLibSSH2.cmake  config.h.cmake  config.h.in
doc/: sftp-module-doc.html
docs/: doxyfile.tmpl  doxygen-api-filter.q  mainpage.doxygen.tmpl  ssh2-module-doc.html
docs/qlib/: Doxyfile.tmpl
qlib/: SftpPoller.qm  SftpPollerUtil.qm  Ssh2Connections.qm
scratch/: ssh2-module-doc.html-orig
src/: .cvsignore  Makefile.am  QC_SFTPClient.cc  QC_SFTPClient.cpp  QC_SFTPClient.qpp  QC_SSH2Base.cc  QC_SSH2Base.h  QC_SSH2Base.qpp  QC_SSH2Channel.cc  QC_SSH2Channel.qpp  QC_SSH2Client.cc  QC_SSH2Client.qpp  SFTPClient.cc  SFTPClient.cpp  SFTPClient.h  SSH2Channel.cc  SSH2Channel.cpp  SSH2Channel.h  SSH2Client.cc  SSH2Client.cpp  SSH2Client.h  single-compilation-unit.cpp  ssh2-module.cc  ssh2-module.cpp  ssh2-module.h  ssh2.h
test/: SFTPClient.qtest  SftpPoller.qtest  SftpPollerMultiDirs.qtest  Ssh2Client.qtest  Ssh2Connections.qtest  sftp-poller.q  ssh2-test.q
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
